gitops/configs/test-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: openshift-default
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: example.com
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - foo.example.com
  rules:
    - backendRefs:
      - name: foo-svc
        port: 8080
